--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           go-version: '^1.22.1'
 
-      - name: GoReleaser beszel
+      - name: GoReleaser cmonitor
         uses: goreleaser/goreleaser-action@v6
         with:
           workdir: ./beszel
