--- a/supplemental/docker/hub/docker-compose.yml
+++ b/supplemental/docker/hub/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  beszel:
-    image: 'henrygd/beszel'
-    container_name: 'beszel'
+  cmonitor-hub:
+    image: 'nguyendkn/cmonitor-hub'
+    container_name: 'cmonitor-hub'
     restart: unless-stopped
     ports:
       - '8090:8090'
