--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,14 @@ jobs:
       - name: Build site
         run: bun run --cwd ./beszel/site build
 
+      - name: Commit build artifacts
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add beszel/site/src/locales/*
+          git commit -m "ci: auto-commit updated locale files [skip ci]" || echo "No changes to commit"
+          git push
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
