--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,15 @@
-name: Build site and commit artifacts
+name: Build CMonitor site
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
-  build:
+  build-site:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Set up bun
         uses: oven-sh/setup-bun@v2
@@ -23,10 +20,8 @@ jobs:
       - name: Build site
         run: bun run --cwd ./beszel/site build
 
-      - name: Commit build artifacts
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add beszel/site/src/locales/*
-          git commit -m "ci: auto-commit updated locale files [skip ci]" || echo "No changes to commit"
-          git push
+      - name: Upload built site
+        uses: actions/upload-artifact@v4
+        with:
+          name: site-dist
+          path: ./beszel/site/dist
