--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,11 +17,14 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Download site dist
-        uses: actions/download-artifact@v4
-        with:
-          name: site-dist
-          path: ./beszel/site/dist
+      - name: Set up bun
+        uses: oven-sh/setup-bun@v2
+
+      - name: Install dependencies
+        run: bun install --no-save --cwd ./beszel/site
+
+      - name: Build site
+        run: bun run --cwd ./beszel/site build
 
       - name: Set up Go
         uses: actions/setup-go@v5
