chore: add systemd service file for cmonitor-agent
This commit introduces a new systemd service file for the cmonitor-agent, defining its configuration, security settings, and dependencies. The service is configured to start after the network is online and includes various sandboxing and security measures to enhance its robustness.

--- a/supplemental/debian/cmonitor-agent.service
+++ b/supplemental/debian/cmonitor-agent.service
@@ -1,16 +1,16 @@
 [Unit]
-Description=Beszel Agent Service
+Description=CMonitor Agent Service
 Wants=network-online.target
 After=network-online.target
 
 [Service]
 Environment="PORT=45876"
-# Port number can be overridden in beszel-agent.conf if needed
-EnvironmentFile=/etc/beszel-agent.conf
-ExecStart=/usr/bin/beszel-agent
-User=beszel
+# Port number can be overridden in cmonitor-agent.conf if needed
+EnvironmentFile=/etc/cmonitor-agent.conf
+ExecStart=/usr/bin/cmonitor-agent
+User=cmonitor-agent
 Restart=on-failure
-StateDirectory=beszel-agent
+StateDirectory=cmonitor-agent
 
 # Security/sandboxing settings
 KeyringMode=private
