ci: update homebrew repository name in .goreleaser.yml
The homebrew repository name was changed from 'homebrew-cmonitor' to 'cmonitor' to align with the updated naming convention and simplify the repository structure

--- a/beszel/.goreleaser.yml
+++ b/beszel/.goreleaser.yml
@@ -152,7 +152,7 @@ brews:
     name: cmonitor-agent
     repository:
       owner: nguyendkn
-      name: homebrew-cmonitor
+      name: cmonitor
     homepage: 'https://cmonitor.dev'
     description: 'Agent for CMonitor, a lightweight server monitoring platform.'
     license: MIT
