ci: update repository name in goreleaser and install script
The repository name for cmonitor-scoops was changed to cmonitor in both the .goreleaser.yml configuration and the install-agent.ps1 script. This change ensures consistency with the updated repository naming convention.

--- a/beszel/.goreleaser.yml
+++ b/beszel/.goreleaser.yml
@@ -119,7 +119,7 @@ scoops:
     name: cmonitor-agent
     repository:
       owner: nguyendkn
-      name: cmonitor-scoops
+      name: cmonitor
     homepage: 'https://cmonitor.dev'
     description: 'Agent for CMonitor, a lightweight server monitoring platform.'
     license: MIT
