chore: update copyright and references from henrygd to nguyendkn
Updated the copyright holder and related references across multiple files to reflect the change from 'henrygd' to 'nguyendkn'. This includes LICENSE, debian/copyright, install scripts, and docker-compose.yml files.

--- a/supplemental/docker/same-system/docker-compose.yml
+++ b/supplemental/docker/same-system/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   cmonitor-hub:
-    image: 'henrygd/cmonitor-hub'
+    image: 'nguyendkn/cmonitor-hub'
     container_name: 'cmonitor-hub'
     restart: unless-stopped
     ports:
@@ -11,7 +11,7 @@ services:
       - 'host.docker.internal:host-gateway'
 
   cmonitor-agent:
-    image: 'henrygd/cmonitor-agent'
+    image: 'nguyendkn/cmonitor-agent'
     container_name: 'cmonitor-agent'
     restart: unless-stopped
     network_mode: host
