--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,11 +30,11 @@ jobs:
         run: |
           git config user.name "goreleaserbot"
           git config user.email "goreleaser@users.noreply.github.com"
-          git checkout ${{ github.ref_name }}
+
           if [[ -n $(git status --porcelain) ]]; then
             git add .
             git commit -m "chore: update i18n files before release"
-            git push origin HEAD
+            git push origin main
           fi
 
       - name: Set up Go
