refactor: remove auto-commit step for i18n updates and adjust GoReleaser configuration

--- a/beszel/.goreleaser.yml
+++ b/beszel/.goreleaser.yml
@@ -60,7 +60,7 @@ archives:
       {{- .Arch }}
     format_overrides:
       - goos: windows
-        formats: [zip]
+        format: zip
 
   - id: cmonitor-hub
     format: tar.gz
@@ -87,6 +87,9 @@ nfpms:
       - cmonitor-agent
     formats:
       - deb
+    # don't think this is needed with CGO_ENABLED=0
+    # dependencies:
+    #   - libc6
     contents:
       - src: ../supplemental/debian/cmonitor-agent.service
         dst: lib/systemd/system/cmonitor-agent.service
@@ -169,41 +172,6 @@ brews:
       log_path "#{Dir.home}/.cache/cmonitor/cmonitor-agent.log"
       error_log_path "#{Dir.home}/.cache/cmonitor/cmonitor-agent.log"
       keep_alive true
-
-winget:
-  - ids: [cmonitor-agent]
-    name: cmonitor-agent
-    package_identifier: nguyendkn.cmonitor-agent
-    publisher: nguyendkn
-    license: MIT
-    license_url: 'https://github.com/nguyendkn/cmonitor/blob/main/LICENSE'
-    copyright: '2025 nguyendkn'
-    homepage: 'https://cmonitor.dev'
-    release_notes_url: 'https://github.com/nguyendkn/cmonitor/releases/tag/v{{ .Version }}'
-    publisher_support_url: 'https://github.com/nguyendkn/cmonitor/issues'
-    short_description: 'Agent for CMonitor, a lightweight server monitoring platform.'
-    skip_upload: auto
-    description: |
-      CMonitor is a lightweight server monitoring platform that includes Docker
-      statistics, historical data, and alert functions. It has a friendly web
-      interface, simple configuration, and is ready to use out of the box.
-      It supports automatic backup, multi-user, OAuth authentication, and
-      API access.
-    tags:
-      - homelab
-      - monitoring
-      - self-hosted
-    repository:
-      owner: nguyendkn
-      name: cmonitor-winget
-      branch: nguyendkn.cmonitor-agent-{{ .Version }}
-      pull_request:
-        enabled: false
-        draft: false
-        base:
-          owner: microsoft
-          name: winget-pkgs
-          branch: master
 
 release:
   draft: false
