Update goreleaser configuration for beszel-agent to include restart delay and process type

--- a/beszel/.goreleaser.yml
+++ b/beszel/.goreleaser.yml
@@ -169,6 +169,9 @@ brews:
       log_path "#{Dir.home}/.cache/beszel/beszel-agent.log"
       error_log_path "#{Dir.home}/.cache/beszel/beszel-agent.log"
       keep_alive true
+      restart_delay 5
+      name beszel-agent
+      process_type :background
 
 winget:
   - ids: [beszel-agent]
