--- a/supplemental/docker/same-system/docker-compose.yml
+++ b/supplemental/docker/same-system/docker-compose.yml
@@ -11,13 +11,16 @@ services:
       - 'host.docker.internal:host-gateway'
 
   beszel-agent:
-    image: 'henrygd/beszel-agent'
+    image: 'henrygd/beszel-agent' #Add -nvidia for nvidia gpus
     container_name: 'beszel-agent'
     restart: unless-stopped
     network_mode: host
+    # runtime: nvidia # when using beszel-agent-nvidia
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
       PORT: 45876
       KEY: '...'
       # FILESYSTEM: /dev/sda1 # set to the correct filesystem for disk I/O stats
+      # NVIDIA_VISIBLE_DEVICES: all # when using beszel-agent-nvidia
+      # NVIDIA_DRIVER_CAPABILITIES: utility # when using beszel-agent-nvidia
