--- a/.github/workflows/label-from-dropdown.yml
+++ b/.github/workflows/label-from-dropdown.yml
@@ -14,8 +14,8 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const areaLabels = ['Metrics', 'Charts', 'Settings', 'Notifications', 'Other'];
-            const componentLabels = ['CPU', 'GPU', 'Memory', 'Docker', 'Network', 'Other'];
+            const areaLabels = ['Metrics', 'Charts & Visualization', 'Settings & Configuration', 'Notifications & Alerts', 'Authentication', 'Installation', 'Performance', 'UI / UX', 'Other'];
+            const componentLabels = ['CPU', 'Memory', 'Storage', 'Network', 'Containers', 'GPU', 'Sensors', 'Other'];
 
             const issueNumber = context.issue.number;
             const owner = context.repo.owner;
@@ -55,13 +55,30 @@ jobs:
             });
             const existingLabelNames = existingLabels.map(l => l.name);
 
-            // Apply labels if any and they exist in the repo
-            const filteredLabels = labelsToAdd.filter(label => existingLabelNames.includes(label));
-            if (filteredLabels.length > 0) {
+            // Find labels that need to be created
+            const labelsToCreate = labelsToAdd.filter(label => !existingLabelNames.includes(label));
+
+            // Create missing labels (with a default color)
+            for (const label of labelsToCreate) {
+              try {
+                await github.rest.issues.createLabel({
+                  owner,
+                  repo,
+                  name: label,
+                  color: 'ededed' // light gray, you can pick any hex color
+                });
+              } catch (e) {
+                // Ignore if label already exists (race condition), otherwise rethrow
+                if (!e || e.status !== 422) throw e;
+              }
+            }
+
+            // Now apply all labels (they all exist now)
+            if (labelsToAdd.length > 0) {
               await github.rest.issues.addLabels({
                 owner,
                 repo,
                 issue_number: issueNumber,
-                labels: filteredLabels
+                labels: labelsToAdd
               });
             } 
