--- a/beszel/site/package.json
+++ b/beszel/site/package.json
@@ -24,6 +24,7 @@
 		"@radix-ui/react-direction": "^1.1.1",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-popover": "^1.1.14",
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slider": "^1.3.5",
