--- a/beszel/site/package.json
+++ b/beszel/site/package.json
@@ -18,6 +18,7 @@
 		"@lingui/react": "^5.3.2",
 		"@nanostores/react": "^0.7.3",
 		"@nanostores/router": "^0.11.0",
+		"@radix-ui/react-accordion": "^1.2.11",
 		"@radix-ui/react-alert-dialog": "^1.1.14",
 		"@radix-ui/react-checkbox": "^1.3.2",
 		"@radix-ui/react-dialog": "^1.1.14",
