添加对 MIPS 和 RISC-V 架构的支持，更新构建脚本

--- a/beszel/.goreleaser.yml
+++ b/beszel/.goreleaser.yml
@@ -35,9 +35,11 @@ builds:
       - amd64
       - arm64
       - arm
+      - mips
       - mips64
-      - riscv64
+      - mips64le
       - mipsle
+      - riscv64
       - ppc64le
     ignore:
       - goos: freebsd
